# kedro-spaceflights-example

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/reviews/csv/: warning.json
src/: requirements.txt  setup.py
src/kedro_spaceflights_example/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kedro_spaceflights_example/pipelines/data_science/: README.md
src/tests/: test_run.py
